--- a/app/src/main/res/layout/item_content_home.xml
+++ b/app/src/main/res/layout/item_content_home.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/cv_image"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    app:cardCornerRadius="7dp"
+    android:layout_width="180dp"
+    android:layout_height="180dp"
+    android:layout_margin="10dp"
+    android:clickable="true"
+    android:foreground="?selectableItemBackground"
+    app:cardCornerRadius="10dp"
     app:cardElevation="5dp">
 
     <LinearLayout
@@ -13,27 +15,27 @@
         android:orientation="vertical">
 
         <ImageView
-            android:id="@+id/iv_slider"
+            android:id="@+id/iv_content"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
-            android:scaleType="centerCrop"
-            app:layout_constraintBottom_toTopOf="@+id/linearLayout2" />
+            android:scaleType="centerCrop" />
 
         <LinearLayout
             android:id="@+id/ll_title"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:gravity="right|center_vertical"
+            android:background="#6D17CB"
+            android:gravity="center_vertical|right"
             app:layout_constraintBottom_toBottomOf="parent">
 
             <TextView
-                android:id="@+id/tv_newsTitle"
-                style="@style/TextAppearance.AppCompat.Title"
+                android:id="@+id/tv_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
-                android:textColor="@color/white" />
+                android:textColor="#A1FFFFFF"
+                android:textSize="13sp" />
         </LinearLayout>
     </LinearLayout>
 </com.google.android.material.card.MaterialCardView>
