--- a/app/src/main/res/navigation/nav_details.xml
+++ b/app/src/main/res/navigation/nav_details.xml
@@ -3,27 +3,24 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_details"
-    app:startDestination="@id/showContentFragment2">
+    app:startDestination="@id/showContentFragment">
 
     <fragment
-        android:id="@+id/showContentFragment2"
+        android:id="@+id/showContentFragment"
         android:name="com.example.pregnancykotlin.ShowContentFragment"
         android:label="fragment_show_content"
         tools:layout="@layout/fragment_show_content" >
         <action
-            android:id="@+id/action_showContentFragment2_to_videoPlayerFragment"
-            app:destination="@id/videoPlayerFragment" />
+            android:id="@+id/action_showContentFragment_to_videoPlayerActivity"
+            app:destination="@id/videoPlayerActivity" />
     </fragment>
-    <fragment
-        android:id="@+id/videoPlayerFragment"
-        android:name="com.example.pregnancykotlin.main.view.VideoPlayerFragment"
-        android:label="fragment_video_player"
-        tools:layout="@layout/fragment_video_player" >
-        <action
-            android:id="@+id/action_videoPlayerFragment_to_showContentFragment2"
-            app:destination="@id/showContentFragment2" />
+    <activity
+        android:id="@+id/videoPlayerActivity"
+        android:name="com.example.pregnancykotlin.main.view.VideoPlayerActivity"
+        android:label="activity_video_player"
+        tools:layout="@layout/activity_video_player" >
         <argument
             android:name="videoUrl"
             app:argType="string" />
-    </fragment>
+    </activity>
 </navigation>
