--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -33,9 +33,9 @@
     <style name="CustomToolbarTheme" parent="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
         <!-- HERE ARE THE CHANGES - Change color of different texts -->
-        <item name="android:textColorPrimary">@color/gray_text_faded</item>
+        <item name="android:textColorPrimary">@color/teal_500</item>
         <item name="colorControlNormal">@color/teal_500</item>
-        <item name="textColor">@color/teal_500</item>
+        <item name="textColor">@color/gray_text_faded</item>
         <item name="font">@font/vazir</item>
         <item name="fontFamily">@font/vazir</item>
         <item name="android:textSize">12dp</item>
@@ -47,6 +47,6 @@
     </style>
 
     <style name="ExpandedAppBar" parent="@android:style/TextAppearance">
-        <item name="android:textSize">25sp</item>
+        <item name="android:textSize">22sp</item>
     </style>
 </resources>
