--- a/app/src/main/res/layout/fragment_show_content.xml
+++ b/app/src/main/res/layout/fragment_show_content.xml
@@ -10,12 +10,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/white"
-        android:fitsSystemWindows="true">
+        app:elevation="0dp">
 
         <com.google.android.material.appbar.CollapsingToolbarLayout
             android:id="@+id/collapsing_toolbar_layout"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="250dp"
             android:fitsSystemWindows="true"
             android:theme="@style/CustomToolbarTheme"
             app:collapsedTitleTextAppearance="@style/CollapsedAppBar"
@@ -29,7 +29,6 @@
                 android:layout_height="wrap_content"
                 android:gravity="center_horizontal"
                 android:orientation="vertical"
-                android:paddingBottom="10dp"
                 app:layout_collapseMode="parallax"
                 app:layout_collapseParallaxMultiplier="0.7"
                 app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed">
@@ -63,9 +62,46 @@
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="48dp"
+                android:elevation="0dp"
                 android:layoutDirection="rtl"
                 app:layout_collapseMode="pin"
-                app:titleTextColor="@color/textColor" />
+                app:titleTextAppearance="@style/myToolbar"
+                app:titleTextColor="@color/textColor">
+
+                <com.like.LikeButton
+                    android:layout_width="35dp"
+                    android:layout_height="35dp"
+                    android:layout_margin="5dp"
+                    app:anim_scale_factor="2"
+                    app:circle_end_color="@color/colorAccent"
+                    app:circle_start_color="@color/colorPrimary"
+                    app:dots_primary_color="@color/colorAccent"
+                    app:dots_secondary_color="@color/colorPrimary"
+                    app:icon_size="20dp"
+                    app:icon_type="Star"
+                    app:is_enabled="true"
+                    app:like_drawable="@drawable/ic_bookmark"
+                    app:liked="false"
+                    app:unlike_drawable="@drawable/ic_un_bookmark" />
+
+                <com.like.LikeButton
+                    android:id="@+id/bt_like"
+                    android:layout_width="35dp"
+                    android:layout_height="35dp"
+                    android:layout_margin="5dp"
+                    app:anim_scale_factor="2"
+                    app:circle_end_color="@color/colorAccent"
+                    app:circle_start_color="@color/colorPrimary"
+                    app:dots_primary_color="@color/colorAccent"
+                    app:dots_secondary_color="@color/colorPrimary"
+                    app:icon_size="20dp"
+                    app:icon_type="Heart"
+                    app:is_enabled="true"
+                    app:like_drawable="@drawable/ic_liked"
+                    app:liked="false"
+                    app:unlike_drawable="@drawable/ic_un_like" />
+
+            </com.google.android.material.appbar.MaterialToolbar>
 
 
         </com.google.android.material.appbar.CollapsingToolbarLayout>
@@ -75,13 +111,16 @@
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:clipToPadding="false"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_marginTop="45dp"
             android:gravity="right"
             android:orientation="vertical">
+
 
             <TextView
                 android:id="@+id/tv_text"
@@ -91,4 +130,82 @@
                 android:lineSpacingExtra="7dp" />
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
+
+    <!--    <iammert.com.view.scalinglib.ScalingLayout-->
+    <!--        android:id="@+id/sl"-->
+    <!--        android:layout_width="300dp"-->
+    <!--        android:layout_height="48dp"-->
+    <!--        android:layout_gravity="center_horizontal"-->
+    <!--        android:clickable="false"-->
+    <!--        android:stateListAnimator="@animator/sl_state_animator"-->
+    <!--        app:layout_behavior="iammert.com.view.scalinglib.ScalingLayoutBehavior"-->
+    <!--        app:radiusFactor="1">-->
+
+    <!--        <LinearLayout-->
+    <!--            android:id="@+id/ll_items"-->
+    <!--            android:layout_width="match_parent"-->
+    <!--            android:layout_height="match_parent"-->
+    <!--            android:gravity="center"-->
+    <!--            android:orientation="horizontal"-->
+    <!--            android:paddingLeft="16dp"-->
+    <!--            android:paddingRight="16dp">-->
+
+    <!--            <LinearLayout-->
+    <!--                android:layout_width="0dp"-->
+    <!--                android:layout_height="match_parent"-->
+    <!--                android:layout_weight="1"-->
+    <!--                android:gravity="center"-->
+    <!--                android:padding="5dp">-->
+
+    <!--                <com.like.LikeButton-->
+    <!--                    android:layout_width="40dp"-->
+    <!--                    android:layout_height="40dp"-->
+    <!--                    app:anim_scale_factor="2"-->
+    <!--                    app:circle_end_color="@color/colorAccent"-->
+    <!--                    app:circle_start_color="@color/colorPrimary"-->
+    <!--                    app:dots_primary_color="@color/colorAccent"-->
+    <!--                    app:dots_secondary_color="@color/colorPrimary"-->
+    <!--                    app:icon_size="15dp"-->
+    <!--                    app:icon_type="Star"-->
+    <!--                    app:is_enabled="true"-->
+    <!--                    app:like_drawable="@mipmap/book"-->
+    <!--                    app:liked="false"-->
+    <!--                    app:unlike_drawable="@mipmap/unbook" />-->
+    <!--            </LinearLayout>-->
+
+    <!--            <LinearLayout-->
+    <!--                android:layout_width="0dp"-->
+    <!--                android:layout_height="match_parent"-->
+    <!--                android:layout_weight="1"-->
+    <!--                android:gravity="center"-->
+    <!--                android:padding="5dp">-->
+
+    <!--                <com.like.LikeButton-->
+    <!--                    android:layout_width="40dp"-->
+    <!--                    android:layout_height="40dp"-->
+    <!--                    app:anim_scale_factor="2"-->
+    <!--                    app:circle_end_color="@color/colorAccent"-->
+    <!--                    app:circle_start_color="@color/colorPrimary"-->
+    <!--                    app:dots_primary_color="@color/colorAccent"-->
+    <!--                    app:dots_secondary_color="@color/colorPrimary"-->
+    <!--                    app:icon_size="15dp"-->
+    <!--                    app:icon_type="Heart"-->
+    <!--                    app:is_enabled="true"-->
+    <!--                    app:like_drawable="@mipmap/like"-->
+    <!--                    app:liked="false"-->
+    <!--                    app:unlike_drawable="@mipmap/un_like" />-->
+    <!--            </LinearLayout>-->
+
+    <!--            <LinearLayout-->
+    <!--                android:layout_width="0dp"-->
+    <!--                android:layout_height="match_parent"-->
+    <!--                android:layout_weight="1"-->
+    <!--                android:padding="5dp">-->
+
+    <!--            </LinearLayout>-->
+
+    <!--        </LinearLayout>-->
+
+    <!--    </iammert.com.view.scalinglib.ScalingLayout>-->
+
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
