--- a/app/src/main/res/layout/fragment_bmi.xml
+++ b/app/src/main/res/layout/fragment_bmi.xml
@@ -82,7 +82,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="left"
-                    android:src="@drawable/ic_height" />
+                    app:srcCompat="@drawable/ic_height" />
 
                 <TextView
                     android:id="@+id/tv_height"
