--- a/app/src/main/res/layout/fragment_show_content.xml
+++ b/app/src/main/res/layout/fragment_show_content.xml
@@ -1,211 +1,206 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ShowContentFragment">
+    tools:context=".main.view.ShowContentFragment">
 
-    <com.google.android.material.appbar.AppBarLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/white"
-        app:elevation="0dp">
-
-        <com.google.android.material.appbar.CollapsingToolbarLayout
-            android:id="@+id/collapsing_toolbar_layout"
-            android:layout_width="match_parent"
-            android:layout_height="250dp"
-            android:fitsSystemWindows="true"
-            android:theme="@style/CustomToolbarTheme"
-            app:collapsedTitleTextAppearance="@style/CollapsedAppBar"
-            app:contentScrim="@color/white"
-            app:expandedTitleMarginStart="72dp"
-            app:expandedTitleTextAppearance="@style/ExpandedAppBar"
-            app:layout_scrollFlags="scroll|exitUntilCollapsed">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center_horizontal"
-                android:orientation="vertical"
-                app:layout_collapseMode="parallax"
-                app:layout_collapseParallaxMultiplier="0.7"
-                app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed">
-
-
-                <androidx.viewpager2.widget.ViewPager2
-                    android:id="@+id/vp_banner"
-                    android:layout_width="match_parent"
-                    android:layout_height="250dp"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-                <com.tbuonomo.viewpagerdotsindicator.WormDotsIndicator
-                    android:id="@+id/worm_dots_indicator"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="5dp"
-                    app:dotsColor="@color/colorPrimary"
-                    app:dotsCornerRadius="8dp"
-                    app:dotsSize="10dp"
-                    app:dotsSpacing="2dp"
-                    app:dotsStrokeColor="@color/gray_text_faded"
-                    app:dotsStrokeWidth="1dp"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/vp_banner" />
-            </LinearLayout>
-
-            <com.google.android.material.appbar.MaterialToolbar
-                android:id="@+id/toolbar"
-                android:layout_width="match_parent"
-                android:layout_height="48dp"
-                android:elevation="0dp"
-                android:layoutDirection="rtl"
-                app:layout_collapseMode="pin"
-                app:titleTextAppearance="@style/myToolbar"
-                app:titleTextColor="@color/textColor">
-
-                <com.like.LikeButton
-                    android:layout_width="35dp"
-                    android:layout_height="35dp"
-                    android:layout_margin="5dp"
-                    app:anim_scale_factor="2"
-                    app:circle_end_color="@color/colorAccent"
-                    app:circle_start_color="@color/colorPrimary"
-                    app:dots_primary_color="@color/colorAccent"
-                    app:dots_secondary_color="@color/colorPrimary"
-                    app:icon_size="20dp"
-                    app:icon_type="Star"
-                    app:is_enabled="true"
-                    app:like_drawable="@drawable/ic_bookmark"
-                    app:liked="false"
-                    app:unlike_drawable="@drawable/ic_un_bookmark" />
-
-                <com.like.LikeButton
-                    android:id="@+id/bt_like"
-                    android:layout_width="35dp"
-                    android:layout_height="35dp"
-                    android:layout_margin="5dp"
-                    app:anim_scale_factor="2"
-                    app:circle_end_color="@color/colorAccent"
-                    app:circle_start_color="@color/colorPrimary"
-                    app:dots_primary_color="@color/colorAccent"
-                    app:dots_secondary_color="@color/colorPrimary"
-                    app:icon_size="20dp"
-                    app:icon_type="Heart"
-                    app:is_enabled="true"
-                    app:like_drawable="@drawable/ic_liked"
-                    app:liked="false"
-                    app:unlike_drawable="@drawable/ic_un_like" />
-
-            </com.google.android.material.appbar.MaterialToolbar>
-
-
-        </com.google.android.material.appbar.CollapsingToolbarLayout>
-
-    </com.google.android.material.appbar.AppBarLayout>
-
-    <androidx.core.widget.NestedScrollView
+    <com.erkutaras.statelayout.StateLayout
+        android:id="@+id/stateLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:clipToPadding="false"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior">
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
+        app:sl_infoLayout="@layout/layout_error"
+        app:sl_loadingLayout="@layout/layout_loading"
+        app:sl_state="content">
 
-        <LinearLayout
+        <androidx.coordinatorlayout.widget.CoordinatorLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="45dp"
-            android:gravity="right"
-            android:orientation="vertical">
+            android:layout_height="match_parent">
+
+            <com.google.android.material.appbar.AppBarLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/white"
+                app:elevation="0dp">
+
+                <com.google.android.material.appbar.CollapsingToolbarLayout
+                    android:id="@+id/collapsing_toolbar_layout"
+                    android:layout_width="match_parent"
+                    android:layout_height="270dp"
+                    android:fitsSystemWindows="true"
+                    android:theme="@style/CustomToolbarTheme"
+                    app:collapsedTitleTextAppearance="@style/CollapsedAppBar"
+                    app:contentScrim="@color/white"
+                    app:expandedTitleMarginStart="72dp"
+                    app:expandedTitleTextAppearance="@style/ExpandedAppBar"
+                    app:layout_scrollFlags="scroll|exitUntilCollapsed">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="center_horizontal"
+                        android:orientation="vertical"
+                        app:layout_collapseMode="parallax"
+                        app:layout_collapseParallaxMultiplier="0.7"
+                        app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed">
 
 
-            <TextView
-                android:id="@+id/tv_text"
+                        <androidx.viewpager2.widget.ViewPager2
+                            android:id="@+id/vp_banner"
+                            android:layout_width="match_parent"
+                            android:layout_height="250dp"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent" />
+
+                        <com.tbuonomo.viewpagerdotsindicator.WormDotsIndicator
+                            android:id="@+id/worm_dots_indicator"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="5dp"
+                            app:dotsColor="@color/colorPrimary"
+                            app:dotsCornerRadius="8dp"
+                            app:dotsSize="10dp"
+                            app:dotsSpacing="2dp"
+                            app:dotsStrokeColor="@color/gray_text_faded"
+                            app:dotsStrokeWidth="1dp"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toBottomOf="@+id/vp_banner" />
+                    </LinearLayout>
+
+                    <com.google.android.material.appbar.MaterialToolbar
+                        android:id="@+id/toolbar"
+                        android:layout_width="match_parent"
+                        android:layout_height="48dp"
+                        android:elevation="0dp"
+                        android:layoutDirection="rtl"
+                        app:layout_collapseMode="pin"
+                        app:titleTextAppearance="@style/myToolbar"
+                        app:titleTextColor="@color/textColor">
+
+                        <com.like.LikeButton
+                            android:id="@+id/bt_bookmark"
+                            android:layout_width="35dp"
+                            android:layout_height="35dp"
+                            android:layout_margin="5dp"
+                            app:anim_scale_factor="2"
+                            app:circle_end_color="@color/black"
+                            app:circle_start_color="@color/gray"
+                            app:dots_primary_color="@color/black"
+                            app:dots_secondary_color="@color/gray"
+                            app:icon_size="20dp"
+                            app:icon_type="Star"
+                            app:is_enabled="true"
+                            app:like_drawable="@drawable/ic_bookmark"
+                            app:liked="false"
+                            app:unlike_drawable="@drawable/ic_un_bookmark" />
+
+                        <com.like.LikeButton
+                            android:id="@+id/bt_like"
+                            android:layout_width="35dp"
+                            android:layout_height="35dp"
+                            android:layout_margin="5dp"
+                            app:anim_scale_factor="2"
+                            app:circle_end_color="@color/colorAccent"
+                            app:circle_start_color="@color/colorPrimary"
+                            app:dots_primary_color="@color/colorAccent"
+                            app:dots_secondary_color="@color/colorPrimary"
+                            app:icon_size="20dp"
+                            app:icon_type="Heart"
+                            app:is_enabled="true"
+                            app:like_drawable="@drawable/ic_liked"
+                            app:liked="false"
+                            app:unlike_drawable="@drawable/ic_un_like" />
+
+                    </com.google.android.material.appbar.MaterialToolbar>
+
+
+                </com.google.android.material.appbar.CollapsingToolbarLayout>
+
+            </com.google.android.material.appbar.AppBarLayout>
+
+            <androidx.core.widget.NestedScrollView
+                android:id="@+id/nested"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:clipToPadding="false"
+                android:fillViewport="true"
+                app:layout_behavior="@string/appbar_scrolling_view_behavior">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginTop="45dp"
+                    android:gravity="right"
+                    android:orientation="vertical">
+
+
+                    <TextView
+                        android:id="@+id/tv_text"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="5dp"
+                        android:lineSpacingExtra="7dp" />
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="50dp"
+                        android:gravity="center"
+                        android:orientation="horizontal">
+
+                        <View
+                            android:layout_width="0dp"
+                            android:layout_height="0.5dp"
+                            android:layout_margin="7dp"
+                            android:layout_weight="1"
+                            android:background="@color/gray" />
+
+                        <TextView
+                            style="@style/TextAppearance.AppCompat.Title"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_margin="8dp"
+                            android:drawableRight="@drawable/comment"
+                            android:drawablePadding="7dp"
+                            android:drawableTint="@color/gray"
+                            android:text="نظرات"
+                            android:textColor="@color/gray_text_faded"
+                            android:textSize="17sp" />
+
+                        <View
+                            android:layout_width="0dp"
+                            android:layout_height="0.5dp"
+                            android:layout_margin="7dp"
+                            android:layout_weight="1"
+                            android:background="@color/gray" />
+
+                    </LinearLayout>
+
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/rv_comments"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_gravity="right" />
+                </LinearLayout>
+            </androidx.core.widget.NestedScrollView>
+
+
+            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
+                android:id="@+id/fab_comment"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="5dp"
-                android:lineSpacingExtra="7dp" />
-        </LinearLayout>
-    </androidx.core.widget.NestedScrollView>
-
-    <!--    <iammert.com.view.scalinglib.ScalingLayout-->
-    <!--        android:id="@+id/sl"-->
-    <!--        android:layout_width="300dp"-->
-    <!--        android:layout_height="48dp"-->
-    <!--        android:layout_gravity="center_horizontal"-->
-    <!--        android:clickable="false"-->
-    <!--        android:stateListAnimator="@animator/sl_state_animator"-->
-    <!--        app:layout_behavior="iammert.com.view.scalinglib.ScalingLayoutBehavior"-->
-    <!--        app:radiusFactor="1">-->
-
-    <!--        <LinearLayout-->
-    <!--            android:id="@+id/ll_items"-->
-    <!--            android:layout_width="match_parent"-->
-    <!--            android:layout_height="match_parent"-->
-    <!--            android:gravity="center"-->
-    <!--            android:orientation="horizontal"-->
-    <!--            android:paddingLeft="16dp"-->
-    <!--            android:paddingRight="16dp">-->
-
-    <!--            <LinearLayout-->
-    <!--                android:layout_width="0dp"-->
-    <!--                android:layout_height="match_parent"-->
-    <!--                android:layout_weight="1"-->
-    <!--                android:gravity="center"-->
-    <!--                android:padding="5dp">-->
-
-    <!--                <com.like.LikeButton-->
-    <!--                    android:layout_width="40dp"-->
-    <!--                    android:layout_height="40dp"-->
-    <!--                    app:anim_scale_factor="2"-->
-    <!--                    app:circle_end_color="@color/colorAccent"-->
-    <!--                    app:circle_start_color="@color/colorPrimary"-->
-    <!--                    app:dots_primary_color="@color/colorAccent"-->
-    <!--                    app:dots_secondary_color="@color/colorPrimary"-->
-    <!--                    app:icon_size="15dp"-->
-    <!--                    app:icon_type="Star"-->
-    <!--                    app:is_enabled="true"-->
-    <!--                    app:like_drawable="@mipmap/book"-->
-    <!--                    app:liked="false"-->
-    <!--                    app:unlike_drawable="@mipmap/unbook" />-->
-    <!--            </LinearLayout>-->
-
-    <!--            <LinearLayout-->
-    <!--                android:layout_width="0dp"-->
-    <!--                android:layout_height="match_parent"-->
-    <!--                android:layout_weight="1"-->
-    <!--                android:gravity="center"-->
-    <!--                android:padding="5dp">-->
-
-    <!--                <com.like.LikeButton-->
-    <!--                    android:layout_width="40dp"-->
-    <!--                    android:layout_height="40dp"-->
-    <!--                    app:anim_scale_factor="2"-->
-    <!--                    app:circle_end_color="@color/colorAccent"-->
-    <!--                    app:circle_start_color="@color/colorPrimary"-->
-    <!--                    app:dots_primary_color="@color/colorAccent"-->
-    <!--                    app:dots_secondary_color="@color/colorPrimary"-->
-    <!--                    app:icon_size="15dp"-->
-    <!--                    app:icon_type="Heart"-->
-    <!--                    app:is_enabled="true"-->
-    <!--                    app:like_drawable="@mipmap/like"-->
-    <!--                    app:liked="false"-->
-    <!--                    app:unlike_drawable="@mipmap/un_like" />-->
-    <!--            </LinearLayout>-->
-
-    <!--            <LinearLayout-->
-    <!--                android:layout_width="0dp"-->
-    <!--                android:layout_height="match_parent"-->
-    <!--                android:layout_weight="1"-->
-    <!--                android:padding="5dp">-->
-
-    <!--            </LinearLayout>-->
-
-    <!--        </LinearLayout>-->
-
-    <!--    </iammert.com.view.scalinglib.ScalingLayout>-->
-
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
+                android:layout_gravity="bottom|right"
+                android:layout_margin="20dp"
+                android:backgroundTint="@color/colorPrimary"
+                android:text="افزودن دیدگاه"
+                android:textColor="@color/white"
+                app:icon="@drawable/ic_comment"
+                app:iconTint="@color/white"
+                app:tint="@null" />
+        </androidx.coordinatorlayout.widget.CoordinatorLayout>
+    </com.erkutaras.statelayout.StateLayout>
+</FrameLayout>
