--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,7 +6,7 @@
     <color name="white">#ffffff</color>
     <color name="textColor">#3E3E3E</color>
     <color name="transparent">#00FFFFFF</color>
-    <color name="descriptionColor">#D0D0D0</color>
+    <color name="descriptionColor">#C6D0D0D0</color>
     <color name="pink_500">#E91E63</color>
     <color name="teal_500">#009688</color>
     <color name="purple_500">#673AB7</color>
@@ -18,4 +18,17 @@
     <color name="light_blue_A200">#FF40C4FF</color>
     <color name="light_blue_A400">#FF00B0FF</color>
     <color name="black_overlay">#66000000</color>
+
+    <color name="logo_black">#000</color>
+    <color name="logo_pink">#ff66a2</color>
+    <color name="logo_light_pink">#ffc6e3</color>
+    <color name="logo_Purple">#740099</color>
+    <color name="logo_light_gray">#484546</color>
+    <color name="logo_gray">#262425</color>
+
+
+    <color name="google_red">#EA4335</color>
+    <color name="google_yellow">#FBBC05</color>
+    <color name="google_blue">#4285F4</color>
+    <color name="google_green">#34A853</color>
 </resources>
