--- a/app/src/main/res/layout/fragment_sign_up_user.xml
+++ b/app/src/main/res/layout/fragment_sign_up_user.xml
@@ -2,162 +2,163 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/bottom_sheet"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".login.view.SignUpUserFragment">
-<androidx.core.widget.NestedScrollView
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <LinearLayout
+
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center_horizontal"
-        android:orientation="vertical">
+        android:layout_height="match_parent">
 
-        <com.google.android.material.card.MaterialCardView
-            android:layout_width="350dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_margin="5dp"
-            app:cardCornerRadius="10dp"
-            app:cardElevation="5dp">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center_horizontal"
+            android:orientation="vertical">
 
-            <LinearLayout
-                android:id="@+id/ll_register"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_gravity="top"
-                android:gravity="center"
-                android:orientation="vertical">
-
-                <de.hdodenhof.circleimageview.CircleImageView
-                    android:layout_width="120dp"
-                    android:layout_height="120dp"
-                    android:src="@mipmap/ava"
-                    app:civ_border_color="@color/gray_border"
-                    app:civ_border_width="1dp"
-                    app:civ_circle_background_color="@color/colorPrimary" />
+            <com.google.android.material.card.MaterialCardView
+                android:layout_width="350dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_margin="5dp"
+                app:cardCornerRadius="10dp"
+                app:cardElevation="5dp">
 
                 <LinearLayout
+                    android:id="@+id/ll_register"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="top"
                     android:gravity="center"
-                    android:layoutDirection="rtl"
-                    android:orientation="horizontal">
+                    android:orientation="vertical">
 
-                    <com.google.android.material.textfield.TextInputLayout
-                        android:id="@+id/name_text_input"
-                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="5dp"
-                        android:layout_marginRight="20dp"
-                        android:layout_weight="1"
-                        android:gravity="center"
-                        android:hint="نام">
+                    <de.hdodenhof.circleimageview.CircleImageView
+                        android:layout_width="120dp"
+                        android:layout_height="120dp"
+                        android:src="@mipmap/ava"
+                        app:civ_border_color="@color/gray_border"
+                        app:civ_border_width="1dp"
+                        app:civ_circle_background_color="@color/colorPrimary" />
 
-                        <com.google.android.material.textfield.TextInputEditText
-                            android:id="@+id/et_firstName"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:gravity="center"
-                            android:inputType="text" />
-                    </com.google.android.material.textfield.TextInputLayout>
-
-                    <com.google.android.material.textfield.TextInputLayout
-                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="20dp"
-                        android:layout_marginRight="5dp"
-                        android:layout_weight="1"
-                        android:gravity="center"
-                        android:hint="نام خانوادگی">
-
-                        <com.google.android.material.textfield.TextInputEditText
-                            android:id="@+id/et_lastName"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:gravity="center"
-                            android:inputType="text" />
-                    </com.google.android.material.textfield.TextInputLayout>
-                </LinearLayout>
-
-                <com.google.android.material.textfield.TextInputLayout
-                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="20dp"
-                    android:layout_marginTop="5dp"
-                    android:layout_marginRight="20dp"
-                    android:focusable="false"
-                    android:focusableInTouchMode="false"
-                    android:gravity="center"
-                    android:hint="تاریخ تولد">
-
-                    <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/et_birthday"
+                    <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:clickable="true"
+                        android:gravity="center"
+                        android:layoutDirection="rtl"
+                        android:orientation="horizontal">
+
+                        <com.google.android.material.textfield.TextInputLayout
+                            android:id="@+id/name_text_input"
+                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="5dp"
+                            android:layout_marginRight="20dp"
+                            android:layout_weight="1"
+                            android:gravity="center"
+                            android:hint="نام">
+
+                            <com.google.android.material.textfield.TextInputEditText
+                                android:id="@+id/et_firstName"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:gravity="center"
+                                android:inputType="text" />
+                        </com.google.android.material.textfield.TextInputLayout>
+
+                        <com.google.android.material.textfield.TextInputLayout
+                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="20dp"
+                            android:layout_marginRight="5dp"
+                            android:layout_weight="1"
+                            android:gravity="center"
+                            android:hint="نام خانوادگی">
+
+                            <com.google.android.material.textfield.TextInputEditText
+                                android:id="@+id/et_lastName"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:gravity="center"
+                                android:inputType="text" />
+                        </com.google.android.material.textfield.TextInputLayout>
+                    </LinearLayout>
+
+                    <com.google.android.material.textfield.TextInputLayout
+                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="20dp"
+                        android:layout_marginTop="5dp"
+                        android:layout_marginRight="20dp"
                         android:focusable="false"
                         android:focusableInTouchMode="false"
                         android:gravity="center"
-                        android:inputType="text" />
-                </com.google.android.material.textfield.TextInputLayout>
+                        android:hint="تاریخ تولد">
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="5dp"
-                    android:id="@+id/tv_weight_reg"
-                    android:text="وزن"
-                    android:textSize="18dp" />
+                        <com.google.android.material.textfield.TextInputEditText
+                            android:id="@+id/et_birthday"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:clickable="true"
+                            android:focusable="false"
+                            android:focusableInTouchMode="false"
+                            android:gravity="center"
+                            android:inputType="text" />
+                    </com.google.android.material.textfield.TextInputLayout>
 
-                <com.zjun.widget.RuleView
-                    android:id="@+id/rule_weight_reg"
-                    android:layout_width="match_parent"
-                    android:layout_height="70dp"
-                    android:layout_marginTop="5dp"
-                    app:gv_currentValue="70"
-                    app:gv_maxValue="200"
-                    app:gv_minValue="50"
-                    app:zjun_bgColor="@color/transparent"
-                    app:zjun_gradationColor="@color/gray_text_faded"
-                    app:zjun_indicatorLineColor="@color/colorPrimary"
-                    app:zjun_textColor="@color/gray_text_faded"
-                    app:zjun_textSize="18sp" />
+                    <TextView
+                        android:id="@+id/tv_weight_reg"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="5dp"
+                        android:text="وزن"
+                        android:textSize="18dp" />
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="5dp"
-                    android:id="@+id/tv_height_reg"
-                    android:text="قد"
-                    android:textSize="18dp" />
+                    <com.zjun.widget.RuleView
+                        android:id="@+id/rule_weight_reg"
+                        android:layout_width="match_parent"
+                        android:layout_height="70dp"
+                        android:layout_marginTop="5dp"
+                        app:gv_currentValue="70"
+                        app:gv_maxValue="200"
+                        app:gv_minValue="50"
+                        app:zjun_bgColor="@color/transparent"
+                        app:zjun_gradationColor="@color/gray_text_faded"
+                        app:zjun_indicatorLineColor="@color/colorPrimary"
+                        app:zjun_textColor="@color/gray_text_faded"
+                        app:zjun_textSize="18sp" />
 
-                <com.github.lany192.picker.NumberPicker
-                    android:id="@+id/np_height_reg"
-                    android:layout_width="match_parent"
-                    android:layout_height="120dp"
-                    android:layout_gravity="center_horizontal"
-                    app:internalMaxHeight="130dp"
-                    app:internalMinWidth="150dp"
-                    app:selectionDivider="@color/colorPrimary"
-                    app:selectionDividerHeight="1px"
-                    app:selectionDividersDistance="40dp"
-                    app:selectionTextColor="@color/black"
-                    app:selectionTextSize="16sp"
-                    app:solidColor="@android:color/transparent" />
+                    <TextView
+                        android:id="@+id/tv_height_reg"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="5dp"
+                        android:text="قد"
+                        android:textSize="18dp" />
+
+                    <com.github.lany192.picker.NumberPicker
+                        android:id="@+id/np_height_reg"
+                        android:layout_width="match_parent"
+                        android:layout_height="120dp"
+                        android:layout_gravity="center_horizontal"
+                        app:internalMaxHeight="130dp"
+                        app:internalMinWidth="150dp"
+                        app:selectionDivider="@color/colorPrimary"
+                        app:selectionDividerHeight="1px"
+                        app:selectionDividersDistance="40dp"
+                        app:selectionTextColor="@color/black"
+                        app:selectionTextSize="16sp"
+                        app:solidColor="@android:color/transparent" />
 
 
+                </LinearLayout>
+            </com.google.android.material.card.MaterialCardView>
 
-
-            </LinearLayout>
-        </com.google.android.material.card.MaterialCardView>
-
-    </LinearLayout>
-</androidx.core.widget.NestedScrollView>
+        </LinearLayout>
+    </androidx.core.widget.NestedScrollView>
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/bt_register"
