--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -267,6 +267,23 @@
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintVertical_bias="0.110000014"
                             app:rippleColor="@color/colorPrimary" />
+                        <com.google.android.material.button.MaterialButton
+                            android:id="@+id/bt_resources"
+                            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
+                            android:layout_width="match_parent"
+                            android:layout_height="70dp"
+                            android:backgroundTint="@color/white"
+                            android:gravity="right|center_vertical"
+                            android:text="منابع"
+                            android:textColor="@color/gray_text_faded"
+                            android:textSize="15sp"
+                            app:icon="@drawable/ic_books_stack_of_three"
+                            app:iconGravity="end"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintVertical_bias="0.110000014"
+                            app:rippleColor="@color/colorPrimary"/>
 
                         <LinearLayout
                             android:layout_width="match_parent"
