--- a/app/src/main/res/layout/fragment_sign_up_user.xml
+++ b/app/src/main/res/layout/fragment_sign_up_user.xml
@@ -139,20 +139,20 @@
                         android:text="قد"
                         android:textSize="18dp" />
 
-                    <com.github.lany192.picker.NumberPicker
+                    <com.shawnlin.numberpicker.NumberPicker
                         android:id="@+id/np_height_reg"
                         android:layout_width="match_parent"
                         android:layout_height="120dp"
                         android:layout_gravity="center_horizontal"
-                        app:internalMaxHeight="130dp"
-                        app:internalMinWidth="150dp"
-                        app:selectionDivider="@color/colorPrimary"
-                        app:selectionDividerHeight="1px"
-                        app:selectionDividersDistance="40dp"
-                        app:selectionTextColor="@color/black"
-                        app:selectionTextSize="16sp"
-                        app:solidColor="@android:color/transparent" />
-
+                         />
+                    <!--app:internalMaxHeight="130dp"
+                    app:internalMinWidth="150dp"
+                    app:selectionDivider="@color/colorPrimary"
+                    app:selectionDividerHeight="1px"
+                    app:selectionDividersDistance="40dp"
+                    app:selectionTextColor="@color/black"
+                    app:selectionTextSize="16sp"
+                    app:solidColor="@android:color/transparent"-->
 
                 </LinearLayout>
             </com.google.android.material.card.MaterialCardView>
