--- a/app/src/main/res/menu/menu_main_bottom.xml
+++ b/app/src/main/res/menu/menu_main_bottom.xml
@@ -6,6 +6,10 @@
         android:icon="@drawable/ic_home"
         android:title="@string/title_home" />
     <item
+        android:id="@+id/searchFragment"
+        android:icon="@drawable/ic_search"
+        android:title="جستجو" />
+    <item
         android:id="@+id/categoryFragment"
         android:icon="@drawable/ic_layers"
         android:title="دسته بندی" />
@@ -13,6 +17,7 @@
         android:id="@+id/calculatorFragment"
         android:icon="@drawable/ic_keys"
         android:title="محاسبه گر" />
+
     <item
         android:id="@+id/profileFragment"
         android:icon="@drawable/ic_user"
