--- a/app/src/main/res/navigation/nav_main.xml
+++ b/app/src/main/res/navigation/nav_main.xml
@@ -122,4 +122,9 @@
             android:name="token"
             app:argType="string" />
     </dialog>
+    <fragment
+        android:id="@+id/searchFragment"
+        android:name="com.example.pregnancykotlin.SearchFragment"
+        android:label="fragment_search"
+        tools:layout="@layout/fragment_search" />
 </navigation>
