--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,12 +6,14 @@
     <color name="white">#ffffff</color>
     <color name="textColor">#3E3E3E</color>
     <color name="transparent">#00FFFFFF</color>
+    <color name="transparent2">#0000FFFF</color>
     <color name="descriptionColor">#C6D0D0D0</color>
     <color name="pink_500">#E91E63</color>
     <color name="teal_500">#009688</color>
     <color name="purple_500">#673AB7</color>
     <color name="blue">#009FFD</color>
     <color name="height">#8AECECEC</color>
+    <color name="height2">#AEFFFFFF</color>
     <color name="textAndIconWhiteTransparent">#B2FFFFFF</color>
     <color name="light_blue_600">#FF039BE5</color>
     <color name="light_blue_900">#FF01579B</color>
